Update catalina.sh